// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getDefaultConfigForPlatform > should return the correct default config for platform belgie 1`] = `
{
  "allowDeliveryOptions": true,
  "allowEveningDelivery": true,
  "allowMondayDelivery": true,
  "allowMorningDelivery": true,
  "allowOnlyRecipient": true,
  "allowPickupLocations": true,
  "allowSameDayDelivery": true,
  "allowSignature": true,
  "apiBaseUrl": "https://api.myparcel.nl",
  "carrierSettings": {},
  "currency": "EUR",
  "cutoffTime": "17:00",
  "cutoffTimeSameDay": "09:30",
  "deliveryDaysWindow": 7,
  "dropOffDays": [
    1,
    2,
    3,
    4,
    5,
  ],
  "dropOffDelay": 0,
  "initial": {},
  "locale": "en-US",
  "packageType": "package",
  "pickupLocationsDefaultView": "list",
  "pickupLocationsMapTileLayerData": "{\\"url\\":\\"https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png\\",\\"attribution\\":\\"&copy; <a href=\\\\\\"https://www.openstreetmap.org/copyright\\\\\\">OpenStreetMap</a> contributors, Tiles style by <a href=\\\\\\"https://www.hotosm.org/\\\\\\" target=\\\\\\"_blank\\\\\\">Humanitarian OpenStreetMap Team</a> hosted by <a href=\\\\\\"https://openstreetmap.fr/\\\\\\" target=\\\\\\"_blank\\\\\\">OpenStreetMap France</a>\\",\\"maxZoom\\":19}",
  "pickupShowDistance": false,
  "platform": "belgie",
  "showDeliveryDate": true,
  "showPriceSurcharge": false,
  "showPrices": true,
}
`;

exports[`getDefaultConfigForPlatform > should return the correct default config for platform myparcel 1`] = `
{
  "allowDeliveryOptions": true,
  "allowEveningDelivery": true,
  "allowMondayDelivery": true,
  "allowMorningDelivery": true,
  "allowOnlyRecipient": true,
  "allowPickupLocations": true,
  "allowSameDayDelivery": true,
  "allowSignature": true,
  "apiBaseUrl": "https://api.myparcel.nl",
  "carrierSettings": {},
  "currency": "EUR",
  "cutoffTime": "17:00",
  "cutoffTimeSameDay": "09:30",
  "deliveryDaysWindow": 7,
  "dropOffDays": [
    1,
    2,
    3,
    4,
    5,
  ],
  "dropOffDelay": 0,
  "initial": {},
  "locale": "en-US",
  "packageType": "package",
  "pickupLocationsDefaultView": "map",
  "pickupLocationsMapTileLayerData": "{\\"url\\":\\"https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png\\",\\"attribution\\":\\"&copy; <a href=\\\\\\"https://www.openstreetmap.org/copyright\\\\\\">OpenStreetMap</a> contributors, Tiles style by <a href=\\\\\\"https://www.hotosm.org/\\\\\\" target=\\\\\\"_blank\\\\\\">Humanitarian OpenStreetMap Team</a> hosted by <a href=\\\\\\"https://openstreetmap.fr/\\\\\\" target=\\\\\\"_blank\\\\\\">OpenStreetMap France</a>\\",\\"maxZoom\\":19}",
  "pickupShowDistance": true,
  "platform": "myparcel",
  "showDeliveryDate": true,
  "showPriceSurcharge": false,
  "showPrices": true,
}
`;
